--- a/registration/templates/admin_login.html
+++ b/registration/templates/admin_login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Design by foolishdeveloper.com -->
-    <title>Login Page</title>
+    <title>Admin Login Page</title>
  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -147,7 +147,7 @@ button{
         <div class="shape"></div>
     </div>
     <form method="post" id="loginUser" >
-        <h3>Login Here</h3>
+        <h3>Admin</h3>
         {% csrf_token %}
         {% if messages %}
             <div class="alert alert-danger" role="alert" style="color: red;">
@@ -163,12 +163,7 @@ button{
         <input type="password" placeholder="Password" id="password" name="pass" required>
 
         <button type="submit">Log In</button>
-        <!-- <input type="button" value=""> -->
-        <!-- <div class="social">
-          <div class="go"><i class="fab fa-google"></i>  Google</div>
-          <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>
-        </div> -->
-        <a href="{% url 'signup' %}"  >Create a account</a>
+        
     </form>
 
     <script
