--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -17,35 +18,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="{% static 'style.css' %}">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-             
-            </ul>
-            <form action="/home" class="d-flex" method="post">
-              
-              <button  class="btn btn-danger" type="submit"><a href="{% url 'logout' %}" >logout</a></button>
-
-            </form>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar bg-dark" style="font-family: 'IBM Plex Mono', monospace; font-size: 20px">
+    <div class="container-fluid" style="display: flex; justify-content: space-between">
+        <a class="navbar-brand text-white" href="{% url 'home' %}"><span style="color: red; font-size: 22px">Home</span></a>  
+        {% if user.is_superuser %}
+        <a href="{% url 'adminn' %}" class="btn btn-outline-danger text-white" type="button">Admin</a>
+        {% endif %}
+        <a href="{% url 'logout' %}">                    
+            <button class="btn btn-outline-danger text-white" style="font-size: 18px" type="submit">Logout</button>
+        </a>
+    </div>
+</nav>
 
       
 </body>
